tests/ui/polymorphization/promoted-function-1.stderr
error: item has unused generic parameters
  --> $DIR/promoted-function-1.rs:9:8
   |
LL | pub fn test<T>() {
   |        ^^^^ - generic parameter `T` is unused

error: aborting due to previous error

